// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ClassView/Class Cleric 1`] = `
<div
  className="css-re7gv7"
>
  <input
    alt="Cleric class info"
    className="css-da2bp6"
    onClick={[Function]}
    src="/icons/Class Icon - Cleric.svg"
    tabIndex={0}
    type="image"
  />
  <button
    className="css-17sp6g8"
    onClick={[Function]}
    tabIndex={-1}
  >
    <svg
      aria-label="pin info pane"
      enableBackground="new 0 0 512 512"
      height={30}
      role="img"
      viewBox="0 0 512 512"
      width={30}
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        pin info pane
      </title>
      <g>
        <path
          d="M 330.274 1.4140000000000001 L 320.374 11.314 C 308.019 23.624 301.04 39.112 299.218 55.235 C 297.395 71.356 300.768 87.806 309.475 102.075 L 309.971 102.888 L 201.191 176.388 L 198.752 173.949 C 178.458 153.593 151.923 143.538 125.213 143.537 C 98.503 143.537 71.968 153.593 51.674 173.949 L 41.774 183.848 L 175.063 317.137 L 1.4140000000000001 490.787 L 21.213 510.586 L 194.862 336.936 L 328.152 470.226 L 338.052 460.326 C 358.408 440.032 368.464 413.497 368.464 386.787 C 368.464 360.076 358.408 333.542 338.052 313.248 L 335.613 310.809 L 409.113 202.029 L 409.926 202.525 C 424.195 211.233 440.645 214.605 456.766 212.783 C 472.889 210.961 488.377 203.981 500.687 191.626 L 510.586 181.727 L 330.274 1.4140000000000001 Z"
          fill="black"
        />
        <path
          d="M 340.174 96.167 C 333.164 89.118 328.814 80.226 327.326 71.099 C 325.837 61.971 327.161 52.325 331.189 43.814 L 331.795 42.533 L 469.468 180.206 L 468.187 180.812 C 459.676 184.84 450.03 186.164 440.902 184.675 C 431.775 183.187 422.883 178.837 415.834 171.827 L 340.174 96.167 Z"
          fill="white"
        />
        <path
          d="M 221.358 196.554 L 328.542 124.133 L 387.867 183.458 L 315.446 290.642 L 221.358 196.554 Z"
          fill="white"
        />
        <path
          d="M 82.278 184.753 L 83.3 184.079 C 98.014 174.385 115.536 170.261 132.453 171.866 C 149.369 173.471 165.996 180.838 178.953 193.747 L 318.253 333.047 C 331.162 346.004 338.529 362.631 340.134 379.547 C 341.739 396.464 337.615 413.986 327.921 428.7 L 327.247 429.722 L 82.278 184.753 Z"
          fill="white"
        />
      </g>
    </svg>
  </button>
  <div
    className="css-escu6n"
  >
    <form>
      <h1>
        Cleric
      </h1>
      <div
        className="css-jc17so"
      >
        <input
          className="css-1npj8ef"
          id="level-Cleric"
          onChange={[Function]}
          type="number"
          value="1"
        />
        <label
          className="css-189idq0"
          htmlFor="level-Cleric"
        >
          Level
        </label>
      </div>
      <h2>
        Spells:
      </h2>
      <h3
        className="css-1gtxqqv"
      >
        You can cast 
        4
         spells:
      </h3>
      <ul
        className="css-ktx1kg"
      >
        <li>
          Two
           level 
          1
           spells
        </li>
        <li>
          Two
           cantrips
        </li>
      </ul>
      <h3
        className="css-tkqgqk"
      >
        Spell List
      </h3>
      <div
        className="css-vz4yst"
      >
        <div
          className="css-kyq0i0"
        >
          Aid
        </div>
        <div
          className="css-kyq0i0"
        >
          Animal Friendship
        </div>
        <div
          className="css-kyq0i0"
        >
          Animate Dead
        </div>
        <div
          className="css-kyq0i0"
        >
          Antimagic Field
        </div>
        <div
          className="css-kyq0i0"
        >
          Arcane Eye
        </div>
        <div
          className="css-kyq0i0"
        >
          Astral Projection
        </div>
        <div
          className="css-kyq0i0"
        >
          Augury
        </div>
        <div
          className="css-kyq0i0"
        >
          Bane
        </div>
        <div
          className="css-kyq0i0"
        >
          Banishment
        </div>
        <div
          className="css-kyq0i0"
        >
          Beacon of Hope
        </div>
        <div
          className="css-kyq0i0"
        >
          Bestow Curse
        </div>
        <div
          className="css-kyq0i0"
        >
          Blade Barrier
        </div>
        <div
          className="css-kyq0i0"
        >
          Bless
        </div>
        <div
          className="css-kyq0i0"
        >
          Blindness/Deafness
        </div>
        <div
          className="css-kyq0i0"
        >
          Calm Emotions
        </div>
        <div
          className="css-kyq0i0"
        >
          Clairvoyance
        </div>
        <div
          className="css-kyq0i0"
        >
          Command
        </div>
        <div
          className="css-kyq0i0"
        >
          Commune
        </div>
        <div
          className="css-kyq0i0"
        >
          Conjure Celestial
        </div>
        <div
          className="css-kyq0i0"
        >
          Contagion
        </div>
        <div
          className="css-kyq0i0"
        >
          Continual Flame
        </div>
        <div
          className="css-kyq0i0"
        >
          Control Water
        </div>
        <div
          className="css-kyq0i0"
        >
          Control Weather
        </div>
        <div
          className="css-kyq0i0"
        >
          Create Food and Water
        </div>
        <div
          className="css-kyq0i0"
        >
          Create Undead
        </div>
        <div
          className="css-kyq0i0"
        >
          Create or Destroy Water
        </div>
        <div
          className="css-kyq0i0"
        >
          Cure Wounds
        </div>
        <div
          className="css-kyq0i0"
        >
          Daylight
        </div>
        <div
          className="css-kyq0i0"
        >
          Death Ward
        </div>
        <div
          className="css-kyq0i0"
        >
          Detect Evil and Good
        </div>
        <div
          className="css-kyq0i0"
        >
          Detect Magic
        </div>
        <div
          className="css-kyq0i0"
        >
          Detect Poison and Disease
        </div>
        <div
          className="css-kyq0i0"
        >
          Dispel Evil and Good
        </div>
        <div
          className="css-kyq0i0"
        >
          Dispel Magic
        </div>
        <div
          className="css-kyq0i0"
        >
          Divine Word
        </div>
        <div
          className="css-kyq0i0"
        >
          Earthquake
        </div>
        <div
          className="css-kyq0i0"
        >
          Enhance Ability
        </div>
        <div
          className="css-kyq0i0"
        >
          Etherealness
        </div>
        <div
          className="css-kyq0i0"
        >
          Find Traps
        </div>
        <div
          className="css-kyq0i0"
        >
          Find the Path
        </div>
        <div
          className="css-kyq0i0"
        >
          Fire Storm
        </div>
        <div
          className="css-kyq0i0"
        >
          Flame Strike
        </div>
        <div
          className="css-kyq0i0"
        >
          Forbiddance
        </div>
        <div
          className="css-kyq0i0"
        >
          Freedom of Movement
        </div>
        <div
          className="css-kyq0i0"
        >
          Gate
        </div>
        <div
          className="css-kyq0i0"
        >
          Geas
        </div>
        <div
          className="css-kyq0i0"
        >
          Gentle Repose
        </div>
        <div
          className="css-kyq0i0"
        >
          Glyph of Warding
        </div>
        <div
          className="css-kyq0i0"
        >
          Greater Restoration
        </div>
        <div
          className="css-kyq0i0"
        >
          Guardian of Faith
        </div>
        <div
          className="css-kyq0i0"
        >
          Guidance
        </div>
        <div
          className="css-kyq0i0"
        >
          Guiding Bolt
        </div>
        <div
          className="css-kyq0i0"
        >
          Hallow
        </div>
        <div
          className="css-kyq0i0"
        >
          Harm
        </div>
        <div
          className="css-kyq0i0"
        >
          Heal
        </div>
        <div
          className="css-kyq0i0"
        >
          Healing Word
        </div>
        <div
          className="css-kyq0i0"
        >
          Heroes' Feast
        </div>
        <div
          className="css-kyq0i0"
        >
          Hold Person
        </div>
        <div
          className="css-kyq0i0"
        >
          Holy Aura
        </div>
        <div
          className="css-kyq0i0"
        >
          Inflict Wounds
        </div>
        <div
          className="css-kyq0i0"
        >
          Insect Plague
        </div>
        <div
          className="css-kyq0i0"
        >
          Legend Lore
        </div>
        <div
          className="css-kyq0i0"
        >
          Lesser Restoration
        </div>
        <div
          className="css-kyq0i0"
        >
          Light
        </div>
        <div
          className="css-kyq0i0"
        >
          Locate Creature
        </div>
        <div
          className="css-kyq0i0"
        >
          Locate Object
        </div>
        <div
          className="css-kyq0i0"
        >
          Magic Circle
        </div>
        <div
          className="css-kyq0i0"
        >
          Mass Cure Wounds
        </div>
        <div
          className="css-kyq0i0"
        >
          Mass Heal
        </div>
        <div
          className="css-kyq0i0"
        >
          Mass Healing Word
        </div>
        <div
          className="css-kyq0i0"
        >
          Meld into Stone
        </div>
        <div
          className="css-kyq0i0"
        >
          Mending
        </div>
        <div
          className="css-kyq0i0"
        >
          Planar Ally
        </div>
        <div
          className="css-kyq0i0"
        >
          Planar Binding
        </div>
        <div
          className="css-kyq0i0"
        >
          Plane Shift
        </div>
        <div
          className="css-kyq0i0"
        >
          Prayer of Healing
        </div>
        <div
          className="css-kyq0i0"
        >
          Protection from Energy
        </div>
        <div
          className="css-kyq0i0"
        >
          Protection from Evil and Good
        </div>
        <div
          className="css-kyq0i0"
        >
          Protection from Poison
        </div>
        <div
          className="css-kyq0i0"
        >
          Purify Food and Drink
        </div>
        <div
          className="css-kyq0i0"
        >
          Raise Dead
        </div>
        <div
          className="css-kyq0i0"
        >
          Regenerate
        </div>
        <div
          className="css-kyq0i0"
        >
          Remove Curse
        </div>
        <div
          className="css-kyq0i0"
        >
          Resistance
        </div>
        <div
          className="css-kyq0i0"
        >
          Resurrection
        </div>
        <div
          className="css-kyq0i0"
        >
          Revivify
        </div>
        <div
          className="css-kyq0i0"
        >
          Sacred Flame
        </div>
        <div
          className="css-kyq0i0"
        >
          Sanctuary
        </div>
        <div
          className="css-kyq0i0"
        >
          Scrying
        </div>
        <div
          className="css-kyq0i0"
        >
          Sending
        </div>
        <div
          className="css-kyq0i0"
        >
          Shield of Faith
        </div>
        <div
          className="css-kyq0i0"
        >
          Silence
        </div>
        <div
          className="css-kyq0i0"
        >
          Spare the Dying
        </div>
        <div
          className="css-kyq0i0"
        >
          Speak with Dead
        </div>
        <div
          className="css-kyq0i0"
        >
          Spirit Guardians
        </div>
        <div
          className="css-kyq0i0"
        >
          Spiritual Weapon
        </div>
        <div
          className="css-kyq0i0"
        >
          Stone Shape
        </div>
        <div
          className="css-kyq0i0"
        >
          Symbol
        </div>
        <div
          className="css-kyq0i0"
        >
          Thaumaturgy
        </div>
        <div
          className="css-kyq0i0"
        >
          Tongues
        </div>
        <div
          className="css-kyq0i0"
        >
          True Resurrection
        </div>
        <div
          className="css-kyq0i0"
        >
          True Seeing
        </div>
        <div
          className="css-kyq0i0"
        >
          Warding Bond
        </div>
        <div
          className="css-kyq0i0"
        >
          Water Walk
        </div>
        <div
          className="css-kyq0i0"
        >
          Word of Recall
        </div>
        <div
          className="css-kyq0i0"
        >
          Zone of Truth
        </div>
      </div>
      <h2>
        Subclasses
      </h2>
      <h3>
        Life
      </h3>
      <h4>
        Spells: 
      </h4>
      <h3
        className="css-tkqgqk"
      >
        Spell List
      </h3>
      <div
        className="css-vz4yst"
      >
        <div
          className="css-kyq0i0"
        >
          Beacon of Hope
        </div>
        <div
          className="css-kyq0i0"
        >
          Bless
        </div>
        <div
          className="css-kyq0i0"
        >
          Cure Wounds
        </div>
        <div
          className="css-kyq0i0"
        >
          Death Ward
        </div>
        <div
          className="css-kyq0i0"
        >
          Lesser Restoration
        </div>
        <div
          className="css-kyq0i0"
        >
          Mass Cure Wounds
        </div>
        <div
          className="css-kyq0i0"
        >
          Raise Dead
        </div>
        <div
          className="css-kyq0i0"
        >
          Revivify
        </div>
        <div
          className="css-kyq0i0"
        >
          Spiritual Weapon
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots ClassView/Class Collection 1`] = `
<div
  className="css-xysbf1"
>
  <div
    className="css-re7gv7"
  >
    <input
      alt="Cleric class info"
      className="css-da2bp6"
      onClick={[Function]}
      src="/icons/Class Icon - Cleric.svg"
      tabIndex={0}
      type="image"
    />
    <button
      className="css-17sp6g8"
      onClick={[Function]}
      tabIndex={-1}
    >
      <svg
        aria-label="pin info pane"
        enableBackground="new 0 0 512 512"
        height={30}
        role="img"
        viewBox="0 0 512 512"
        width={30}
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          pin info pane
        </title>
        <g>
          <path
            d="M 330.274 1.4140000000000001 L 320.374 11.314 C 308.019 23.624 301.04 39.112 299.218 55.235 C 297.395 71.356 300.768 87.806 309.475 102.075 L 309.971 102.888 L 201.191 176.388 L 198.752 173.949 C 178.458 153.593 151.923 143.538 125.213 143.537 C 98.503 143.537 71.968 153.593 51.674 173.949 L 41.774 183.848 L 175.063 317.137 L 1.4140000000000001 490.787 L 21.213 510.586 L 194.862 336.936 L 328.152 470.226 L 338.052 460.326 C 358.408 440.032 368.464 413.497 368.464 386.787 C 368.464 360.076 358.408 333.542 338.052 313.248 L 335.613 310.809 L 409.113 202.029 L 409.926 202.525 C 424.195 211.233 440.645 214.605 456.766 212.783 C 472.889 210.961 488.377 203.981 500.687 191.626 L 510.586 181.727 L 330.274 1.4140000000000001 Z"
            fill="black"
          />
          <path
            d="M 340.174 96.167 C 333.164 89.118 328.814 80.226 327.326 71.099 C 325.837 61.971 327.161 52.325 331.189 43.814 L 331.795 42.533 L 469.468 180.206 L 468.187 180.812 C 459.676 184.84 450.03 186.164 440.902 184.675 C 431.775 183.187 422.883 178.837 415.834 171.827 L 340.174 96.167 Z"
            fill="white"
          />
          <path
            d="M 221.358 196.554 L 328.542 124.133 L 387.867 183.458 L 315.446 290.642 L 221.358 196.554 Z"
            fill="white"
          />
          <path
            d="M 82.278 184.753 L 83.3 184.079 C 98.014 174.385 115.536 170.261 132.453 171.866 C 149.369 173.471 165.996 180.838 178.953 193.747 L 318.253 333.047 C 331.162 346.004 338.529 362.631 340.134 379.547 C 341.739 396.464 337.615 413.986 327.921 428.7 L 327.247 429.722 L 82.278 184.753 Z"
            fill="white"
          />
        </g>
      </svg>
    </button>
    <div
      className="css-escu6n"
    >
      <form>
        <h1>
          Cleric
        </h1>
        <div
          className="css-jc17so"
        >
          <input
            className="css-1npj8ef"
            id="level-Cleric"
            onChange={[Function]}
            type="number"
            value="1"
          />
          <label
            className="css-189idq0"
            htmlFor="level-Cleric"
          >
            Level
          </label>
        </div>
        <h2>
          Spells:
        </h2>
        <h3
          className="css-1gtxqqv"
        >
          You can cast 
          4
           spells:
        </h3>
        <ul
          className="css-ktx1kg"
        >
          <li>
            Two
             level 
            1
             spells
          </li>
          <li>
            Two
             cantrips
          </li>
        </ul>
        <h3
          className="css-tkqgqk"
        >
          Spell List
        </h3>
        <div
          className="css-vz4yst"
        >
          <div
            className="css-kyq0i0"
          >
            Aid
          </div>
          <div
            className="css-kyq0i0"
          >
            Animal Friendship
          </div>
          <div
            className="css-kyq0i0"
          >
            Animate Dead
          </div>
          <div
            className="css-kyq0i0"
          >
            Antimagic Field
          </div>
          <div
            className="css-kyq0i0"
          >
            Arcane Eye
          </div>
          <div
            className="css-kyq0i0"
          >
            Astral Projection
          </div>
          <div
            className="css-kyq0i0"
          >
            Augury
          </div>
          <div
            className="css-kyq0i0"
          >
            Bane
          </div>
          <div
            className="css-kyq0i0"
          >
            Banishment
          </div>
          <div
            className="css-kyq0i0"
          >
            Beacon of Hope
          </div>
          <div
            className="css-kyq0i0"
          >
            Bestow Curse
          </div>
          <div
            className="css-kyq0i0"
          >
            Blade Barrier
          </div>
          <div
            className="css-kyq0i0"
          >
            Bless
          </div>
          <div
            className="css-kyq0i0"
          >
            Blindness/Deafness
          </div>
          <div
            className="css-kyq0i0"
          >
            Calm Emotions
          </div>
          <div
            className="css-kyq0i0"
          >
            Clairvoyance
          </div>
          <div
            className="css-kyq0i0"
          >
            Command
          </div>
          <div
            className="css-kyq0i0"
          >
            Commune
          </div>
          <div
            className="css-kyq0i0"
          >
            Conjure Celestial
          </div>
          <div
            className="css-kyq0i0"
          >
            Contagion
          </div>
          <div
            className="css-kyq0i0"
          >
            Continual Flame
          </div>
          <div
            className="css-kyq0i0"
          >
            Control Water
          </div>
          <div
            className="css-kyq0i0"
          >
            Control Weather
          </div>
          <div
            className="css-kyq0i0"
          >
            Create Food and Water
          </div>
          <div
            className="css-kyq0i0"
          >
            Create Undead
          </div>
          <div
            className="css-kyq0i0"
          >
            Create or Destroy Water
          </div>
          <div
            className="css-kyq0i0"
          >
            Cure Wounds
          </div>
          <div
            className="css-kyq0i0"
          >
            Daylight
          </div>
          <div
            className="css-kyq0i0"
          >
            Death Ward
          </div>
          <div
            className="css-kyq0i0"
          >
            Detect Evil and Good
          </div>
          <div
            className="css-kyq0i0"
          >
            Detect Magic
          </div>
          <div
            className="css-kyq0i0"
          >
            Detect Poison and Disease
          </div>
          <div
            className="css-kyq0i0"
          >
            Dispel Evil and Good
          </div>
          <div
            className="css-kyq0i0"
          >
            Dispel Magic
          </div>
          <div
            className="css-kyq0i0"
          >
            Divine Word
          </div>
          <div
            className="css-kyq0i0"
          >
            Earthquake
          </div>
          <div
            className="css-kyq0i0"
          >
            Enhance Ability
          </div>
          <div
            className="css-kyq0i0"
          >
            Etherealness
          </div>
          <div
            className="css-kyq0i0"
          >
            Find Traps
          </div>
          <div
            className="css-kyq0i0"
          >
            Find the Path
          </div>
          <div
            className="css-kyq0i0"
          >
            Fire Storm
          </div>
          <div
            className="css-kyq0i0"
          >
            Flame Strike
          </div>
          <div
            className="css-kyq0i0"
          >
            Forbiddance
          </div>
          <div
            className="css-kyq0i0"
          >
            Freedom of Movement
          </div>
          <div
            className="css-kyq0i0"
          >
            Gate
          </div>
          <div
            className="css-kyq0i0"
          >
            Geas
          </div>
          <div
            className="css-kyq0i0"
          >
            Gentle Repose
          </div>
          <div
            className="css-kyq0i0"
          >
            Glyph of Warding
          </div>
          <div
            className="css-kyq0i0"
          >
            Greater Restoration
          </div>
          <div
            className="css-kyq0i0"
          >
            Guardian of Faith
          </div>
          <div
            className="css-kyq0i0"
          >
            Guidance
          </div>
          <div
            className="css-kyq0i0"
          >
            Guiding Bolt
          </div>
          <div
            className="css-kyq0i0"
          >
            Hallow
          </div>
          <div
            className="css-kyq0i0"
          >
            Harm
          </div>
          <div
            className="css-kyq0i0"
          >
            Heal
          </div>
          <div
            className="css-kyq0i0"
          >
            Healing Word
          </div>
          <div
            className="css-kyq0i0"
          >
            Heroes' Feast
          </div>
          <div
            className="css-kyq0i0"
          >
            Hold Person
          </div>
          <div
            className="css-kyq0i0"
          >
            Holy Aura
          </div>
          <div
            className="css-kyq0i0"
          >
            Inflict Wounds
          </div>
          <div
            className="css-kyq0i0"
          >
            Insect Plague
          </div>
          <div
            className="css-kyq0i0"
          >
            Legend Lore
          </div>
          <div
            className="css-kyq0i0"
          >
            Lesser Restoration
          </div>
          <div
            className="css-kyq0i0"
          >
            Light
          </div>
          <div
            className="css-kyq0i0"
          >
            Locate Creature
          </div>
          <div
            className="css-kyq0i0"
          >
            Locate Object
          </div>
          <div
            className="css-kyq0i0"
          >
            Magic Circle
          </div>
          <div
            className="css-kyq0i0"
          >
            Mass Cure Wounds
          </div>
          <div
            className="css-kyq0i0"
          >
            Mass Heal
          </div>
          <div
            className="css-kyq0i0"
          >
            Mass Healing Word
          </div>
          <div
            className="css-kyq0i0"
          >
            Meld into Stone
          </div>
          <div
            className="css-kyq0i0"
          >
            Mending
          </div>
          <div
            className="css-kyq0i0"
          >
            Planar Ally
          </div>
          <div
            className="css-kyq0i0"
          >
            Planar Binding
          </div>
          <div
            className="css-kyq0i0"
          >
            Plane Shift
          </div>
          <div
            className="css-kyq0i0"
          >
            Prayer of Healing
          </div>
          <div
            className="css-kyq0i0"
          >
            Protection from Energy
          </div>
          <div
            className="css-kyq0i0"
          >
            Protection from Evil and Good
          </div>
          <div
            className="css-kyq0i0"
          >
            Protection from Poison
          </div>
          <div
            className="css-kyq0i0"
          >
            Purify Food and Drink
          </div>
          <div
            className="css-kyq0i0"
          >
            Raise Dead
          </div>
          <div
            className="css-kyq0i0"
          >
            Regenerate
          </div>
          <div
            className="css-kyq0i0"
          >
            Remove Curse
          </div>
          <div
            className="css-kyq0i0"
          >
            Resistance
          </div>
          <div
            className="css-kyq0i0"
          >
            Resurrection
          </div>
          <div
            className="css-kyq0i0"
          >
            Revivify
          </div>
          <div
            className="css-kyq0i0"
          >
            Sacred Flame
          </div>
          <div
            className="css-kyq0i0"
          >
            Sanctuary
          </div>
          <div
            className="css-kyq0i0"
          >
            Scrying
          </div>
          <div
            className="css-kyq0i0"
          >
            Sending
          </div>
          <div
            className="css-kyq0i0"
          >
            Shield of Faith
          </div>
          <div
            className="css-kyq0i0"
          >
            Silence
          </div>
          <div
            className="css-kyq0i0"
          >
            Spare the Dying
          </div>
          <div
            className="css-kyq0i0"
          >
            Speak with Dead
          </div>
          <div
            className="css-kyq0i0"
          >
            Spirit Guardians
          </div>
          <div
            className="css-kyq0i0"
          >
            Spiritual Weapon
          </div>
          <div
            className="css-kyq0i0"
          >
            Stone Shape
          </div>
          <div
            className="css-kyq0i0"
          >
            Symbol
          </div>
          <div
            className="css-kyq0i0"
          >
            Thaumaturgy
          </div>
          <div
            className="css-kyq0i0"
          >
            Tongues
          </div>
          <div
            className="css-kyq0i0"
          >
            True Resurrection
          </div>
          <div
            className="css-kyq0i0"
          >
            True Seeing
          </div>
          <div
            className="css-kyq0i0"
          >
            Warding Bond
          </div>
          <div
            className="css-kyq0i0"
          >
            Water Walk
          </div>
          <div
            className="css-kyq0i0"
          >
            Word of Recall
          </div>
          <div
            className="css-kyq0i0"
          >
            Zone of Truth
          </div>
        </div>
        <h2>
          Subclasses
        </h2>
        <h3>
          Life
        </h3>
        <h4>
          Spells: 
        </h4>
        <h3
          className="css-tkqgqk"
        >
          Spell List
        </h3>
        <div
          className="css-vz4yst"
        >
          <div
            className="css-kyq0i0"
          >
            Beacon of Hope
          </div>
          <div
            className="css-kyq0i0"
          >
            Bless
          </div>
          <div
            className="css-kyq0i0"
          >
            Cure Wounds
          </div>
          <div
            className="css-kyq0i0"
          >
            Death Ward
          </div>
          <div
            className="css-kyq0i0"
          >
            Lesser Restoration
          </div>
          <div
            className="css-kyq0i0"
          >
            Mass Cure Wounds
          </div>
          <div
            className="css-kyq0i0"
          >
            Raise Dead
          </div>
          <div
            className="css-kyq0i0"
          >
            Revivify
          </div>
          <div
            className="css-kyq0i0"
          >
            Spiritual Weapon
          </div>
        </div>
      </form>
    </div>
  </div>
  <div
    className="css-re7gv7"
  >
    <input
      alt="Monk class info"
      className="css-da2bp6"
      onClick={[Function]}
      src="/icons/Class Icon - Monk.svg"
      tabIndex={0}
      type="image"
    />
    <button
      className="css-17sp6g8"
      onClick={[Function]}
      tabIndex={-1}
    >
      <svg
        aria-label="pin info pane"
        enableBackground="new 0 0 512 512"
        height={30}
        role="img"
        viewBox="0 0 512 512"
        width={30}
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          pin info pane
        </title>
        <g>
          <path
            d="M 330.274 1.4140000000000001 L 320.374 11.314 C 308.019 23.624 301.04 39.112 299.218 55.235 C 297.395 71.356 300.768 87.806 309.475 102.075 L 309.971 102.888 L 201.191 176.388 L 198.752 173.949 C 178.458 153.593 151.923 143.538 125.213 143.537 C 98.503 143.537 71.968 153.593 51.674 173.949 L 41.774 183.848 L 175.063 317.137 L 1.4140000000000001 490.787 L 21.213 510.586 L 194.862 336.936 L 328.152 470.226 L 338.052 460.326 C 358.408 440.032 368.464 413.497 368.464 386.787 C 368.464 360.076 358.408 333.542 338.052 313.248 L 335.613 310.809 L 409.113 202.029 L 409.926 202.525 C 424.195 211.233 440.645 214.605 456.766 212.783 C 472.889 210.961 488.377 203.981 500.687 191.626 L 510.586 181.727 L 330.274 1.4140000000000001 Z"
            fill="black"
          />
          <path
            d="M 340.174 96.167 C 333.164 89.118 328.814 80.226 327.326 71.099 C 325.837 61.971 327.161 52.325 331.189 43.814 L 331.795 42.533 L 469.468 180.206 L 468.187 180.812 C 459.676 184.84 450.03 186.164 440.902 184.675 C 431.775 183.187 422.883 178.837 415.834 171.827 L 340.174 96.167 Z"
            fill="white"
          />
          <path
            d="M 221.358 196.554 L 328.542 124.133 L 387.867 183.458 L 315.446 290.642 L 221.358 196.554 Z"
            fill="white"
          />
          <path
            d="M 82.278 184.753 L 83.3 184.079 C 98.014 174.385 115.536 170.261 132.453 171.866 C 149.369 173.471 165.996 180.838 178.953 193.747 L 318.253 333.047 C 331.162 346.004 338.529 362.631 340.134 379.547 C 341.739 396.464 337.615 413.986 327.921 428.7 L 327.247 429.722 L 82.278 184.753 Z"
            fill="white"
          />
        </g>
      </svg>
    </button>
    <div
      className="css-escu6n"
    >
      <form>
        <h1>
          Monk
        </h1>
        <div
          className="css-jc17so"
        >
          <input
            className="css-1npj8ef"
            id="level-Monk"
            onChange={[Function]}
            type="number"
            value="1"
          />
          <label
            className="css-189idq0"
            htmlFor="level-Monk"
          >
            Level
          </label>
        </div>
        <h2>
          Spells:
        </h2>
        <p>
          None
        </p>
        <h2>
          Subclasses
        </h2>
        <h3>
          Open Hand
        </h3>
        <h4>
          Spells: 
        </h4>
        <p>
          None
        </p>
      </form>
    </div>
  </div>
</div>
`;

exports[`Storyshots ClassView/Class Monk 1`] = `
<div
  className="css-re7gv7"
>
  <input
    alt="Monk class info"
    className="css-da2bp6"
    onClick={[Function]}
    src="/icons/Class Icon - Monk.svg"
    tabIndex={0}
    type="image"
  />
  <button
    className="css-17sp6g8"
    onClick={[Function]}
    tabIndex={-1}
  >
    <svg
      aria-label="pin info pane"
      enableBackground="new 0 0 512 512"
      height={30}
      role="img"
      viewBox="0 0 512 512"
      width={30}
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        pin info pane
      </title>
      <g>
        <path
          d="M 330.274 1.4140000000000001 L 320.374 11.314 C 308.019 23.624 301.04 39.112 299.218 55.235 C 297.395 71.356 300.768 87.806 309.475 102.075 L 309.971 102.888 L 201.191 176.388 L 198.752 173.949 C 178.458 153.593 151.923 143.538 125.213 143.537 C 98.503 143.537 71.968 153.593 51.674 173.949 L 41.774 183.848 L 175.063 317.137 L 1.4140000000000001 490.787 L 21.213 510.586 L 194.862 336.936 L 328.152 470.226 L 338.052 460.326 C 358.408 440.032 368.464 413.497 368.464 386.787 C 368.464 360.076 358.408 333.542 338.052 313.248 L 335.613 310.809 L 409.113 202.029 L 409.926 202.525 C 424.195 211.233 440.645 214.605 456.766 212.783 C 472.889 210.961 488.377 203.981 500.687 191.626 L 510.586 181.727 L 330.274 1.4140000000000001 Z"
          fill="black"
        />
        <path
          d="M 340.174 96.167 C 333.164 89.118 328.814 80.226 327.326 71.099 C 325.837 61.971 327.161 52.325 331.189 43.814 L 331.795 42.533 L 469.468 180.206 L 468.187 180.812 C 459.676 184.84 450.03 186.164 440.902 184.675 C 431.775 183.187 422.883 178.837 415.834 171.827 L 340.174 96.167 Z"
          fill="white"
        />
        <path
          d="M 221.358 196.554 L 328.542 124.133 L 387.867 183.458 L 315.446 290.642 L 221.358 196.554 Z"
          fill="white"
        />
        <path
          d="M 82.278 184.753 L 83.3 184.079 C 98.014 174.385 115.536 170.261 132.453 171.866 C 149.369 173.471 165.996 180.838 178.953 193.747 L 318.253 333.047 C 331.162 346.004 338.529 362.631 340.134 379.547 C 341.739 396.464 337.615 413.986 327.921 428.7 L 327.247 429.722 L 82.278 184.753 Z"
          fill="white"
        />
      </g>
    </svg>
  </button>
  <div
    className="css-escu6n"
  >
    <form>
      <h1>
        Monk
      </h1>
      <div
        className="css-jc17so"
      >
        <input
          className="css-1npj8ef"
          id="level-Monk"
          onChange={[Function]}
          type="number"
          value="1"
        />
        <label
          className="css-189idq0"
          htmlFor="level-Monk"
        >
          Level
        </label>
      </div>
      <h2>
        Spells:
      </h2>
      <p>
        None
      </p>
      <h2>
        Subclasses
      </h2>
      <h3>
        Open Hand
      </h3>
      <h4>
        Spells: 
      </h4>
      <p>
        None
      </p>
    </form>
  </div>
</div>
`;

exports[`Storyshots Icons Artificer Icon 1`] = `
<input
  alt="Artificer class info"
  className="css-10fgt7p"
  src="/icons/Class Icon - Artificer.svg"
  tabIndex={0}
  type="image"
/>
`;

exports[`Storyshots Icons Icon Collection 1`] = `
<div>
  <input
    alt="Artificer class info"
    className="css-10fgt7p"
    src="/icons/Class Icon - Artificer.svg"
    tabIndex={0}
    type="image"
  />
  <input
    alt="Barbarian class info"
    className="css-10fgt7p"
    src="/icons/Class Icon - Barbarian.svg"
    tabIndex={0}
    type="image"
  />
  <input
    alt="Bard class info"
    className="css-10fgt7p"
    src="/icons/Class Icon - Bard.svg"
    tabIndex={0}
    type="image"
  />
  <input
    alt="Cleric class info"
    className="css-10fgt7p"
    src="/icons/Class Icon - Cleric.svg"
    tabIndex={0}
    type="image"
  />
  <input
    alt="Druid class info"
    className="css-10fgt7p"
    src="/icons/Class Icon - Druid.svg"
    tabIndex={0}
    type="image"
  />
  <input
    alt="Fighter class info"
    className="css-10fgt7p"
    src="/icons/Class Icon - Fighter.svg"
    tabIndex={0}
    type="image"
  />
  <input
    alt="Monk class info"
    className="css-10fgt7p"
    src="/icons/Class Icon - Monk.svg"
    tabIndex={0}
    type="image"
  />
  <input
    alt="Paladin class info"
    className="css-10fgt7p"
    src="/icons/Class Icon - Paladin.svg"
    tabIndex={0}
    type="image"
  />
  <input
    alt="Ranger class info"
    className="css-10fgt7p"
    src="/icons/Class Icon - Ranger.svg"
    tabIndex={0}
    type="image"
  />
  <input
    alt="Rogue class info"
    className="css-10fgt7p"
    src="/icons/Class Icon - Rogue.svg"
    tabIndex={0}
    type="image"
  />
  <input
    alt="Sorcerer class info"
    className="css-10fgt7p"
    src="/icons/Class Icon - Sorcerer.svg"
    tabIndex={0}
    type="image"
  />
  <input
    alt="Warlock class info"
    className="css-10fgt7p"
    src="/icons/Class Icon - Warlock.svg"
    tabIndex={0}
    type="image"
  />
  <input
    alt="Wizard class info"
    className="css-10fgt7p"
    src="/icons/Class Icon - Wizard.svg"
    tabIndex={0}
    type="image"
  />
</div>
`;

exports[`Storyshots Inputs/Level Level Input 1`] = `
<div
  className="css-d1149t"
>
  <input
    className="css-1npj8ef"
    id="level-undefined"
    onChange={[Function]}
    type="number"
    value="1"
  />
  <label
    className="css-189idq0"
    htmlFor="level-undefined"
  >
    Level
  </label>
</div>
`;

exports[`Storyshots SVGIcons Pin Icon 1`] = `
<svg
  aria-label="A Pin"
  enableBackground="new 0 0 512 512"
  height={50}
  role="img"
  viewBox="0 0 512 512"
  width={50}
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    A Pin
  </title>
  <g>
    <path
      d="M 330.274 1.4140000000000001 L 320.374 11.314 C 308.019 23.624 301.04 39.112 299.218 55.235 C 297.395 71.356 300.768 87.806 309.475 102.075 L 309.971 102.888 L 201.191 176.388 L 198.752 173.949 C 178.458 153.593 151.923 143.538 125.213 143.537 C 98.503 143.537 71.968 153.593 51.674 173.949 L 41.774 183.848 L 175.063 317.137 L 1.4140000000000001 490.787 L 21.213 510.586 L 194.862 336.936 L 328.152 470.226 L 338.052 460.326 C 358.408 440.032 368.464 413.497 368.464 386.787 C 368.464 360.076 358.408 333.542 338.052 313.248 L 335.613 310.809 L 409.113 202.029 L 409.926 202.525 C 424.195 211.233 440.645 214.605 456.766 212.783 C 472.889 210.961 488.377 203.981 500.687 191.626 L 510.586 181.727 L 330.274 1.4140000000000001 Z"
      fill=""
    />
    <path
      d="M 340.174 96.167 C 333.164 89.118 328.814 80.226 327.326 71.099 C 325.837 61.971 327.161 52.325 331.189 43.814 L 331.795 42.533 L 469.468 180.206 L 468.187 180.812 C 459.676 184.84 450.03 186.164 440.902 184.675 C 431.775 183.187 422.883 178.837 415.834 171.827 L 340.174 96.167 Z"
      fill=""
    />
    <path
      d="M 221.358 196.554 L 328.542 124.133 L 387.867 183.458 L 315.446 290.642 L 221.358 196.554 Z"
      fill=""
    />
    <path
      d="M 82.278 184.753 L 83.3 184.079 C 98.014 174.385 115.536 170.261 132.453 171.866 C 149.369 173.471 165.996 180.838 178.953 193.747 L 318.253 333.047 C 331.162 346.004 338.529 362.631 340.134 379.547 C 341.739 396.464 337.615 413.986 327.921 428.7 L 327.247 429.722 L 82.278 184.753 Z"
      fill=""
    />
  </g>
</svg>
`;

exports[`Storyshots Spells Default 1`] = `
Array [
  <h2>
    Spells:
  </h2>,
  <h3
    className="css-1gtxqqv"
  >
    You can cast 
    10
     spells:
  </h3>,
  <ul
    className="css-ktx1kg"
  >
    <li>
      Four
       level 
      1
       spells
    </li>
    <li>
      Three
       level 
      2
       spells
    </li>
    <li>
      Three
       cantrips
    </li>
  </ul>,
  <h3
    className="css-tkqgqk"
  >
    Spell List
  </h3>,
  <div
    className="css-vz4yst"
  >
    <div
      className="css-kyq0i0"
    >
      Aid
    </div>
    <div
      className="css-kyq0i0"
    >
      Animal Friendship
    </div>
    <div
      className="css-kyq0i0"
    >
      Animate Dead
    </div>
    <div
      className="css-kyq0i0"
    >
      Antimagic Field
    </div>
    <div
      className="css-kyq0i0"
    >
      Arcane Eye
    </div>
    <div
      className="css-kyq0i0"
    >
      Astral Projection
    </div>
    <div
      className="css-kyq0i0"
    >
      Augury
    </div>
    <div
      className="css-kyq0i0"
    >
      Bane
    </div>
    <div
      className="css-kyq0i0"
    >
      Banishment
    </div>
    <div
      className="css-kyq0i0"
    >
      Beacon of Hope
    </div>
    <div
      className="css-kyq0i0"
    >
      Bestow Curse
    </div>
    <div
      className="css-kyq0i0"
    >
      Blade Barrier
    </div>
    <div
      className="css-kyq0i0"
    >
      Bless
    </div>
    <div
      className="css-kyq0i0"
    >
      Blindness/Deafness
    </div>
    <div
      className="css-kyq0i0"
    >
      Calm Emotions
    </div>
    <div
      className="css-kyq0i0"
    >
      Clairvoyance
    </div>
    <div
      className="css-kyq0i0"
    >
      Command
    </div>
    <div
      className="css-kyq0i0"
    >
      Commune
    </div>
    <div
      className="css-kyq0i0"
    >
      Conjure Celestial
    </div>
    <div
      className="css-kyq0i0"
    >
      Contagion
    </div>
    <div
      className="css-kyq0i0"
    >
      Continual Flame
    </div>
    <div
      className="css-kyq0i0"
    >
      Control Water
    </div>
    <div
      className="css-kyq0i0"
    >
      Control Weather
    </div>
    <div
      className="css-kyq0i0"
    >
      Create Food and Water
    </div>
    <div
      className="css-kyq0i0"
    >
      Create Undead
    </div>
    <div
      className="css-kyq0i0"
    >
      Create or Destroy Water
    </div>
    <div
      className="css-kyq0i0"
    >
      Cure Wounds
    </div>
    <div
      className="css-kyq0i0"
    >
      Daylight
    </div>
    <div
      className="css-kyq0i0"
    >
      Death Ward
    </div>
    <div
      className="css-kyq0i0"
    >
      Detect Evil and Good
    </div>
    <div
      className="css-kyq0i0"
    >
      Detect Magic
    </div>
    <div
      className="css-kyq0i0"
    >
      Detect Poison and Disease
    </div>
    <div
      className="css-kyq0i0"
    >
      Dispel Evil and Good
    </div>
    <div
      className="css-kyq0i0"
    >
      Dispel Magic
    </div>
    <div
      className="css-kyq0i0"
    >
      Divine Word
    </div>
    <div
      className="css-kyq0i0"
    >
      Earthquake
    </div>
    <div
      className="css-kyq0i0"
    >
      Enhance Ability
    </div>
    <div
      className="css-kyq0i0"
    >
      Etherealness
    </div>
    <div
      className="css-kyq0i0"
    >
      Find Traps
    </div>
    <div
      className="css-kyq0i0"
    >
      Find the Path
    </div>
    <div
      className="css-kyq0i0"
    >
      Fire Storm
    </div>
    <div
      className="css-kyq0i0"
    >
      Flame Strike
    </div>
    <div
      className="css-kyq0i0"
    >
      Forbiddance
    </div>
    <div
      className="css-kyq0i0"
    >
      Freedom of Movement
    </div>
    <div
      className="css-kyq0i0"
    >
      Gate
    </div>
    <div
      className="css-kyq0i0"
    >
      Geas
    </div>
    <div
      className="css-kyq0i0"
    >
      Gentle Repose
    </div>
    <div
      className="css-kyq0i0"
    >
      Glyph of Warding
    </div>
    <div
      className="css-kyq0i0"
    >
      Greater Restoration
    </div>
    <div
      className="css-kyq0i0"
    >
      Guardian of Faith
    </div>
    <div
      className="css-kyq0i0"
    >
      Guidance
    </div>
    <div
      className="css-kyq0i0"
    >
      Guiding Bolt
    </div>
    <div
      className="css-kyq0i0"
    >
      Hallow
    </div>
    <div
      className="css-kyq0i0"
    >
      Harm
    </div>
    <div
      className="css-kyq0i0"
    >
      Heal
    </div>
    <div
      className="css-kyq0i0"
    >
      Healing Word
    </div>
    <div
      className="css-kyq0i0"
    >
      Heroes' Feast
    </div>
    <div
      className="css-kyq0i0"
    >
      Hold Person
    </div>
    <div
      className="css-kyq0i0"
    >
      Holy Aura
    </div>
    <div
      className="css-kyq0i0"
    >
      Inflict Wounds
    </div>
    <div
      className="css-kyq0i0"
    >
      Insect Plague
    </div>
    <div
      className="css-kyq0i0"
    >
      Legend Lore
    </div>
    <div
      className="css-kyq0i0"
    >
      Lesser Restoration
    </div>
    <div
      className="css-kyq0i0"
    >
      Light
    </div>
    <div
      className="css-kyq0i0"
    >
      Locate Creature
    </div>
    <div
      className="css-kyq0i0"
    >
      Locate Object
    </div>
    <div
      className="css-kyq0i0"
    >
      Magic Circle
    </div>
    <div
      className="css-kyq0i0"
    >
      Mass Cure Wounds
    </div>
    <div
      className="css-kyq0i0"
    >
      Mass Heal
    </div>
    <div
      className="css-kyq0i0"
    >
      Mass Healing Word
    </div>
    <div
      className="css-kyq0i0"
    >
      Meld into Stone
    </div>
    <div
      className="css-kyq0i0"
    >
      Mending
    </div>
    <div
      className="css-kyq0i0"
    >
      Planar Ally
    </div>
    <div
      className="css-kyq0i0"
    >
      Planar Binding
    </div>
    <div
      className="css-kyq0i0"
    >
      Plane Shift
    </div>
    <div
      className="css-kyq0i0"
    >
      Prayer of Healing
    </div>
    <div
      className="css-kyq0i0"
    >
      Protection from Energy
    </div>
    <div
      className="css-kyq0i0"
    >
      Protection from Evil and Good
    </div>
    <div
      className="css-kyq0i0"
    >
      Protection from Poison
    </div>
    <div
      className="css-kyq0i0"
    >
      Purify Food and Drink
    </div>
    <div
      className="css-kyq0i0"
    >
      Raise Dead
    </div>
    <div
      className="css-kyq0i0"
    >
      Regenerate
    </div>
    <div
      className="css-kyq0i0"
    >
      Remove Curse
    </div>
    <div
      className="css-kyq0i0"
    >
      Resistance
    </div>
    <div
      className="css-kyq0i0"
    >
      Resurrection
    </div>
    <div
      className="css-kyq0i0"
    >
      Revivify
    </div>
    <div
      className="css-kyq0i0"
    >
      Sacred Flame
    </div>
    <div
      className="css-kyq0i0"
    >
      Sanctuary
    </div>
    <div
      className="css-kyq0i0"
    >
      Scrying
    </div>
    <div
      className="css-kyq0i0"
    >
      Sending
    </div>
    <div
      className="css-kyq0i0"
    >
      Shield of Faith
    </div>
    <div
      className="css-kyq0i0"
    >
      Silence
    </div>
    <div
      className="css-kyq0i0"
    >
      Spare the Dying
    </div>
    <div
      className="css-kyq0i0"
    >
      Speak with Dead
    </div>
    <div
      className="css-kyq0i0"
    >
      Spirit Guardians
    </div>
    <div
      className="css-kyq0i0"
    >
      Spiritual Weapon
    </div>
    <div
      className="css-kyq0i0"
    >
      Stone Shape
    </div>
    <div
      className="css-kyq0i0"
    >
      Symbol
    </div>
    <div
      className="css-kyq0i0"
    >
      Thaumaturgy
    </div>
    <div
      className="css-kyq0i0"
    >
      Tongues
    </div>
    <div
      className="css-kyq0i0"
    >
      True Resurrection
    </div>
    <div
      className="css-kyq0i0"
    >
      True Seeing
    </div>
    <div
      className="css-kyq0i0"
    >
      Warding Bond
    </div>
    <div
      className="css-kyq0i0"
    >
      Water Walk
    </div>
    <div
      className="css-kyq0i0"
    >
      Word of Recall
    </div>
    <div
      className="css-kyq0i0"
    >
      Zone of Truth
    </div>
  </div>,
]
`;
